@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2575 2004/03/15 22:37:42 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2576 2004/03/16 00:36:28 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-16 08:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/compiler/harbour.c
+    ! minor fix for undetected variable with /w1 ie :
+      .--
+      | proc main
+      | local a := tmp[1]
+      `--
+
 2004-03-16 07:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/transfrm.c
     ! re-introduce hacks to handle conversion of string/numbers to numeric
